@@ -1,6 +1,9 @@
 2006-11-15 - standa
 Underline effect doesn't need to keep a font glyph cached (done in the
 text rendering function directly.
+Fontextra.ref_count introduced to fix fundamental Fontheader memory 
+management bug that must have been causing crashes and rendering
+errors because of use of unallocated memory.
 
 2006-11-13 - standa
 Some vertical font alignment tuning. Still not completely right IMHO.
